src/main/gen/rs/pax/paxintellijplugin/parser/PaxParser.java
// This is a generated file. Not intended for manual editing.
package rs.pax.paxintellijplugin.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static rs.pax.paxintellijplugin.psi.PaxTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class PaxParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    r = parse_root_(t, b);
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b) {
    return parse_root_(t, b, 0);
  }

  static boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return paxFile(b, l + 1);
  }

  /* ********************************************************** */
  // statement_control_flow | matched_tag | self_closing_tag
  public static boolean any_tag_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_tag_pair")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_TAG_PAIR, "<any tag pair>");
    r = statement_control_flow(b, l + 1);
    if (!r) r = matched_tag(b, l + 1);
    if (!r) r = self_closing_tag(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // literal_value | expression_wrapped | identifier
  public static boolean any_template_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "any_template_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ANY_TEMPLATE_VALUE, "<any template value>");
    r = literal_value(b, l + 1);
    if (!r) r = expression_wrapped(b, l + 1);
    if (!r) r = identifier(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // attribute_event_id  '=' literal_function
  public static boolean attribute_event_binding(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_event_binding")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = attribute_event_id(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && literal_function(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_EVENT_BINDING, r);
    return r;
  }

  /* ********************************************************** */
  // '@'  identifier
  public static boolean attribute_event_id(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_event_id")) return false;
    if (!nextTokenIs(b, AT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AT);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, ATTRIBUTE_EVENT_ID, r);
    return r;
  }

  /* ********************************************************** */
  // attribute_event_binding | (identifier '=' any_template_value)
  public static boolean attribute_key_value_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_key_value_pair")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATTRIBUTE_KEY_VALUE_PAIR, "<attribute key value pair>");
    r = attribute_event_binding(b, l + 1);
    if (!r) r = attribute_key_value_pair_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // identifier '=' any_template_value
  private static boolean attribute_key_value_pair_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "attribute_key_value_pair_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = identifier(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && any_template_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // '<'  '/' pascalidentifier '>'
  public static boolean closing_tag(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "closing_tag")) return false;
    if (!nextTokenIs(b, XO_REL_LT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, XO_REL_LT, XO_DIV, PASCALIDENTIFIER, XO_REL_GT);
    exit_section_(b, m, CLOSING_TAG, r);
    return r;
  }

  /* ********************************************************** */
  // events '{'  events_key_value_pair*  '}'
  public static boolean events_block_declaration(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_block_declaration")) return false;
    if (!nextTokenIs(b, EVENTS)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeTokens(b, 0, EVENTS, LCURLY);
    r = r && events_block_declaration_2(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, EVENTS_BLOCK_DECLARATION, r);
    return r;
  }

  // events_key_value_pair*
  private static boolean events_block_declaration_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_block_declaration_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!events_key_value_pair(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "events_block_declaration_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // identifier  ':'
  public static boolean events_key(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_key")) return false;
    if (!nextTokenIs(b, "<events key>", LOWERIDENTIFIER, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EVENTS_KEY, "<events key>");
    r = identifier(b, l + 1);
    r = r && consumeToken(b, COLON);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // events_key  events_value  ','?
  public static boolean events_key_value_pair(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_key_value_pair")) return false;
    if (!nextTokenIs(b, "<events key value pair>", LOWERIDENTIFIER, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EVENTS_KEY_VALUE_PAIR, "<events key value pair>");
    r = events_key(b, l + 1);
    r = r && events_value(b, l + 1);
    r = r && events_key_value_pair_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ','?
  private static boolean events_key_value_pair_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_key_value_pair_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // literal_function | function_list
  public static boolean events_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "events_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EVENTS_VALUE, "<events value>");
    r = literal_function(b, l + 1);
    if (!r) r = function_list(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // xo_prefix*  xo_primary  (xo_infix  xo_prefix*  xo_primary )*
  public static boolean expression_body(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_body")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, EXPRESSION_BODY, "<expression body>");
    r = expression_body_0(b, l + 1);
    r = r && xo_primary(b, l + 1);
    r = r && expression_body_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // xo_prefix*
  private static boolean expression_body_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_body_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!xo_prefix(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_body_0", c)) break;
    }
    return true;
  }

  // (xo_infix  xo_prefix*  xo_primary )*
  private static boolean expression_body_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_body_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!expression_body_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_body_2", c)) break;
    }
    return true;
  }

  // xo_infix  xo_prefix*  xo_primary
  private static boolean expression_body_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_body_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = xo_infix(b, l + 1);
    r = r && expression_body_2_0_1(b, l + 1);
    r = r && xo_primary(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // xo_prefix*
  private static boolean expression_body_2_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_body_2_0_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!xo_prefix(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "expression_body_2_0_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // '('  expression_body  ')'  literal_number_unit?
  public static boolean expression_grouped(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_grouped")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && expression_body(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    r = r && expression_grouped_3(b, l + 1);
    exit_section_(b, m, EXPRESSION_GROUPED, r);
    return r;
  }

  // literal_number_unit?
  private static boolean expression_grouped_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_grouped_3")) return false;
    literal_number_unit(b, l + 1);
    return true;
  }

  /* ********************************************************** */
  // '{'  expression_body  '}'
  public static boolean expression_wrapped(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "expression_wrapped")) return false;
    if (!nextTokenIs(b, LCURLY)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LCURLY);
    r = r && expression_body(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, m, EXPRESSION_WRAPPED, r);
    return r;
  }

  /* ********************************************************** */
  // '['  literal_function*  ']'
  public static boolean function_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_list")) return false;
    if (!nextTokenIs(b, LSQUARE)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LSQUARE);
    r = r && function_list_1(b, l + 1);
    r = r && consumeToken(b, RSQUARE);
    exit_section_(b, m, FUNCTION_LIST, r);
    return r;
  }

  // literal_function*
  private static boolean function_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "function_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!literal_function(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "function_list_1", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // loweridentifier | pascalidentifier
  public static boolean identifier(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "identifier")) return false;
    if (!nextTokenIs(b, "<identifier>", LOWERIDENTIFIER, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, IDENTIFIER, "<identifier>");
    r = consumeToken(b, LOWERIDENTIFIER);
    if (!r) r = consumeToken(b, PASCALIDENTIFIER);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // node_inner_content | (any_tag_pair)*
  public static boolean inner_nodes(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inner_nodes")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, INNER_NODES, "<inner nodes>");
    r = node_inner_content(b, l + 1);
    if (!r) r = inner_nodes_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (any_tag_pair)*
  private static boolean inner_nodes_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inner_nodes_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!inner_nodes_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "inner_nodes_1", c)) break;
    }
    return true;
  }

  // (any_tag_pair)
  private static boolean inner_nodes_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "inner_nodes_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = any_tag_pair(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // literal_value  (','  literal_value)*
  public static boolean literal_enum_args_list(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_args_list")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_ENUM_ARGS_LIST, "<literal enum args list>");
    r = literal_value(b, l + 1);
    r = r && literal_enum_args_list_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (','  literal_value)*
  private static boolean literal_enum_args_list_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_args_list_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!literal_enum_args_list_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "literal_enum_args_list_1", c)) break;
    }
    return true;
  }

  // ','  literal_value
  private static boolean literal_enum_args_list_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_args_list_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && literal_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // pascalidentifier  ('::'  identifier)*  ('(' literal_enum_args_list ')')?
  public static boolean literal_enum_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_value")) return false;
    if (!nextTokenIs(b, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PASCALIDENTIFIER);
    r = r && literal_enum_value_1(b, l + 1);
    r = r && literal_enum_value_2(b, l + 1);
    exit_section_(b, m, LITERAL_ENUM_VALUE, r);
    return r;
  }

  // ('::'  identifier)*
  private static boolean literal_enum_value_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_value_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!literal_enum_value_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "literal_enum_value_1", c)) break;
    }
    return true;
  }

  // '::'  identifier
  private static boolean literal_enum_value_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_value_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, SUBCLASS);
    r = r && identifier(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // ('(' literal_enum_args_list ')')?
  private static boolean literal_enum_value_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_value_2")) return false;
    literal_enum_value_2_0(b, l + 1);
    return true;
  }

  // '(' literal_enum_args_list ')'
  private static boolean literal_enum_value_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_enum_value_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && literal_enum_args_list(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // "self." ?  identifier  ','?
  public static boolean literal_function(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_function")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_FUNCTION, "<literal function>");
    r = literal_function_0(b, l + 1);
    r = r && identifier(b, l + 1);
    r = r && literal_function_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // "self." ?
  private static boolean literal_function_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_function_0")) return false;
    consumeToken(b, "self.");
    return true;
  }

  // ','?
  private static boolean literal_function_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_function_2")) return false;
    consumeToken(b, COMMA);
    return true;
  }

  /* ********************************************************** */
  // literal_number_float | literal_number_integer
  public static boolean literal_number(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number")) return false;
    if (!nextTokenIs(b, "<literal number>", ASCIIDIGIT, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_NUMBER, "<literal number>");
    r = literal_number_float(b, l + 1);
    if (!r) r = literal_number_integer(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // asciidigit *  '.'  asciidigit+
  public static boolean literal_number_float(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_float")) return false;
    if (!nextTokenIs(b, "<literal number float>", ASCIIDIGIT, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_NUMBER_FLOAT, "<literal number float>");
    r = literal_number_float_0(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && literal_number_float_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // asciidigit *
  private static boolean literal_number_float_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_float_0")) return false;
    while (true) {
      int c = current_position_(b);
      if (!consumeToken(b, ASCIIDIGIT)) break;
      if (!empty_element_parsed_guard_(b, "literal_number_float_0", c)) break;
    }
    return true;
  }

  // asciidigit+
  private static boolean literal_number_float_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_float_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASCIIDIGIT);
    while (r) {
      int c = current_position_(b);
      if (!consumeToken(b, ASCIIDIGIT)) break;
      if (!empty_element_parsed_guard_(b, "literal_number_float_2", c)) break;
    }
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // (!('.')  asciidigit)+
  public static boolean literal_number_integer(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_integer")) return false;
    if (!nextTokenIs(b, ASCIIDIGIT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = literal_number_integer_0(b, l + 1);
    while (r) {
      int c = current_position_(b);
      if (!literal_number_integer_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "literal_number_integer", c)) break;
    }
    exit_section_(b, m, LITERAL_NUMBER_INTEGER, r);
    return r;
  }

  // !('.')  asciidigit
  private static boolean literal_number_integer_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_integer_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = literal_number_integer_0_0(b, l + 1);
    r = r && consumeToken(b, ASCIIDIGIT);
    exit_section_(b, m, null, r);
    return r;
  }

  // !('.')
  private static boolean literal_number_integer_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_integer_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NOT_);
    r = !consumeToken(b, DOT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // '%' | "px"
  public static boolean literal_number_unit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_unit")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_NUMBER_UNIT, "<literal number unit>");
    r = consumeToken(b, XO_PERCENT);
    if (!r) r = consumeToken(b, "px");
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // literal_number  literal_number_unit
  public static boolean literal_number_with_unit(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_number_with_unit")) return false;
    if (!nextTokenIs(b, "<literal number with unit>", ASCIIDIGIT, DOT)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_NUMBER_WITH_UNIT, "<literal number with unit>");
    r = literal_number(b, l + 1);
    r = r && literal_number_unit(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // pascalidentifier?  '{'  settings_key_value_pair*  '}'
  public static boolean literal_object(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_object")) return false;
    if (!nextTokenIs(b, "<literal object>", LCURLY, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_OBJECT, "<literal object>");
    r = literal_object_0(b, l + 1);
    r = r && consumeToken(b, LCURLY);
    r = r && literal_object_2(b, l + 1);
    r = r && consumeToken(b, RCURLY);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // pascalidentifier?
  private static boolean literal_object_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_object_0")) return false;
    consumeToken(b, PASCALIDENTIFIER);
    return true;
  }

  // settings_key_value_pair*
  private static boolean literal_object_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_object_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!settings_key_value_pair(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "literal_object_2", c)) break;
    }
    return true;
  }

  /* ********************************************************** */
  // ('(')  literal_value  (','  literal_value)*  (')')
  public static boolean literal_tuple(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_tuple")) return false;
    if (!nextTokenIs(b, LPAREN)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAREN);
    r = r && literal_value(b, l + 1);
    r = r && literal_tuple_2(b, l + 1);
    r = r && consumeToken(b, RPAREN);
    exit_section_(b, m, LITERAL_TUPLE, r);
    return r;
  }

  // (','  literal_value)*
  private static boolean literal_tuple_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_tuple_2")) return false;
    while (true) {
      int c = current_position_(b);
      if (!literal_tuple_2_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "literal_tuple_2", c)) break;
    }
    return true;
  }

  // ','  literal_value
  private static boolean literal_tuple_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_tuple_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COMMA);
    r = r && literal_value(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // identifier  '.'  literal_number_integer
  public static boolean literal_tuple_access(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_tuple_access")) return false;
    if (!nextTokenIs(b, "<literal tuple access>", LOWERIDENTIFIER, PASCALIDENTIFIER)) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_TUPLE_ACCESS, "<literal tuple access>");
    r = identifier(b, l + 1);
    r = r && consumeToken(b, DOT);
    r = r && literal_number_integer(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // literal_number_with_unit | literal_number | literal_tuple | literal_enum_value | stringlit
  public static boolean literal_value(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "literal_value")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, LITERAL_VALUE, "<literal value>");
    r = literal_number_with_unit(b, l + 1);
    if (!r) r = literal_number(b, l + 1);
    if (!r) r = literal_tuple(b, l + 1);
    if (!r) r = literal_enum_value(b, l + 1);
    if (!r) r = consumeToken(b, STRINGLIT);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  /* ********************************************************** */
  // open_tag  inner_nodes  closing_tag
  public static boolean matched_tag(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "matched_tag")) return false;
    if (!nextTokenIs(b, XO_REL_LT)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = open_tag(b, l + 1);
    r = r && inner_nodes(b, l + 1);
    r = r && closing_tag(b, l + 1);
    exit_section_(b, m, MATCHED_TAG, r);
    return r;
  }
